--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hcaptcha/react-hcaptcha": "^1.14.0",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.1",
     "next": "15.1.6",
