--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build && next lint --no-cache",
+    "build": "next build && next lint",
     "start": "next start",
     "lint": "next lint"
   },
@@ -12,14 +12,14 @@
     "@hcaptcha/react-hcaptcha": "^1.14.0",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.1",
-    "next": "15.1.6",
+    "next": "16.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
-    "eslint-config-next": "15.1.6",
+    "eslint-config-next": "16.1.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
