--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hcaptcha/react-hcaptcha": "^1.14.0",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.1",
+    "framer-motion": "^12.34.3",
     "next": "16.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -24,4 +25,3 @@
     "tailwindcss": "^3.4.1"
   }
 }
-
